@@ -8,7 +8,7 @@ Proc::tored - Service management using a pid file and touch files
 
 =head1 VERSION
 
-version 0.08
+version 0.09
 
 =head1 SYNOPSIS
 
@@ -202,7 +202,7 @@ resume>).
   # Allow service to resume execution
   resume $service;
 
-=head1 PID FILES
+=head1 PID FILE
 
 A pid file is used to identify a running service. While the service is running,
 barring any outside interference, the pid will contain the pid of the running
